syntax = "proto3";

package authentication;

service micro {
    rpc GenerateToken(User) returns (Token) {}
    rpc ValidateToken(Token) returns (User) {}
}


message User {
  int32 id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string name = 5;
  string access_token = 6;
  string picture = 7;
}

message Role {
  int32 id = 1;
  string name = 2;
}

message Permission {
    int32 id = 1;
    string name = 2;
    string key = 3;
    int32 role_id = 4;
}

message Token {
  string token = 1;
}
